--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,5 +18,6 @@ jobs:
       run: |
         GIT_SHA="$(git rev-parse --short HEAD)"
         echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login --username ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
-        docker build . --file Dockerfile --tag marcel1707/demo:latest marcel1707/demo:$GIT_SHA
+        docker build . --file Dockerfile --tag marcel1707/demo:latest --tag marcel1707/demo:$GIT_SHA
+        
       
