--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,13 +13,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: |
-        GIT_SHA="$(git rev-parse --short HEAD)"
-        echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login --username ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
-        docker build . --file Dockerfile --tag marcel1707/demo:latest --tag marcel1707/demo:$GIT_SHA
-        docker push marcel1707/demo:latest
-        docker push marcel1707/demo:$GIT_SHA
-        
-      
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          
+      -
+        name: Build and export to Docker
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          load: true
+          
+      -
+        name: Build and push
+        uses: docker/build-push-action@v3
+        env:
+          GIT_SHA: "$(git rev-parse --short HEAD)"
+        with:
+          push: true
+          tags: marcel1707/demo:latest, marcel1707/demo:$GIT_SHA
+          
