--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,6 +26,7 @@ jobs:
         with:
           context: .
           load: true
+          file: Dockerfile
           
       -
         name: Build and push
