--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,6 +28,15 @@ jobs:
           file: Dockerfile
           
       -
+        name: Run Trivy vulnerability scanner 
+        uses: aquasecurity/trivy-action@master
+        with:
+          scan-type: 'fs'
+          ignore-unfixed: true
+          severity: 'CRITICAL, HIGH'
+          exit-code: '1'
+          
+      -
         name: Build and push
         uses: docker/build-push-action@v3
         with:
