--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,13 +28,24 @@ jobs:
           file: Dockerfile
           
       -
-        name: Run Trivy vulnerability scanner 
+        name: Run Trivy vulnerability scanner for image
         uses: aquasecurity/trivy-action@master
         with:
-          scan-type: 'fs'
+          image-ref: 'marcel1707/demo:latest'
+          format: 'table'
           ignore-unfixed: true
           severity: 'CRITICAL, HIGH'
           exit-code: '1'
+          
+      -
+        name: Run Trivy vulnerability scanner for image (2) 
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: 'marcel1707/demo:latest'
+          format: 'table'
+          ignore-unfixed: true
+          severity: 'UNKNOWN,LOW,MEDIUM'
+          exit-code: '0'
           
       -
         name: Build and push
