--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,17 +28,7 @@ jobs:
           file: Dockerfile
           
       -
-        name: Run Trivy vulnerability scanner for image
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: 'marcel1707/demo:latest'
-          format: 'table'
-          ignore-unfixed: true
-          severity: 'CRITICAL, HIGH'
-          exit-code: '1'
-          
-      -
-        name: Run Trivy vulnerability scanner for image (2) 
+        name: Run Trivy vulnerability scanner for image (unknown, low & medium) 
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: 'marcel1707/demo:latest'
@@ -46,6 +36,26 @@ jobs:
           ignore-unfixed: true
           severity: 'UNKNOWN,LOW,MEDIUM'
           exit-code: '0'
+          
+      -
+        name: Run Trivy vulnerability scanner for image (Dockerfile)
+        uses: aquasecurity/trivy-action@master
+        with:
+          scan-type: 'config'
+          format: 'table'
+          ignore-unfixed: true
+          severity: 'CRITICAL, HIGH'
+          exit-code: '1'
+          
+      -
+        name: Run Trivy vulnerability scanner for image (critical & high)
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: 'marcel1707/demo:latest'
+          format: 'table'
+          ignore-unfixed: true
+          severity: 'CRITICAL, HIGH'
+          exit-code: '1'
           
       -
         name: Build and push
